@@ -33,168 +33,153 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Consumer;
-
 @SuppressWarnings("removal")
-public abstract class ElectroRunners extends ArmorItem {
-	public ElectroRunners(Type type, Properties properties) {
-		super(DifModTiers.ARMOR_MATERIAL_ELECTRO, type, properties.stacksTo(1));
+public abstract class ElectroRunners extends ArmorItem{
+	public ElectroRunners(Type type,Properties properties){
+		super(DifModTiers.ARMOR_MATERIAL_ELECTRO,type,properties.stacksTo(1));
 	}
-
-	public static class Boots extends ElectroRunners {
-		public static final int MAX = 1000;
-		private static final ResourceLocation S_MOD = ResourceLocation.fromNamespaceAndPath(DifMod.MODID, "electro_runners_speed");
-		private static final ResourceLocation H_MOD = ResourceLocation.fromNamespaceAndPath(DifMod.MODID, "electro_runners_step");
-		private static final ResourceLocation A_MOD = ResourceLocation.fromNamespaceAndPath(DifMod.MODID, "electro_runners_armor");
-
-		public Boots() {
-			super(Type.BOOTS, new Properties().stacksTo(1));
+	public static class Boots extends ElectroRunners{
+		public static final int MAX=1000;
+		private static final ResourceLocation S_MOD=ResourceLocation.fromNamespaceAndPath(DifMod.MODID,"electro_runners_speed");
+		private static final ResourceLocation H_MOD=ResourceLocation.fromNamespaceAndPath(DifMod.MODID,"electro_runners_step");
+		private static final ResourceLocation A_MOD=ResourceLocation.fromNamespaceAndPath(DifMod.MODID,"electro_runners_armor");
+		public Boots(){
+			super(Type.BOOTS,new Properties().stacksTo(1));
 		}
-
 		// ── Energie: čtení a zápis přes CustomData NBT ──────────────────────
-
-		public static int getEnergy(ItemStack stack) {
-			CustomData data = stack.get(DataComponents.CUSTOM_DATA);
-			if (data == null) return 0;
+		public static int getEnergy(ItemStack stack){
+			CustomData data=stack.get(DataComponents.CUSTOM_DATA);
+			if(data==null) return 0;
 			return data.copyTag().getInt("Energy");
 		}
-
-		public static void setEnergy(ItemStack stack, int amount) {
-			int clamped = Math.max(0, Math.min(MAX, amount));
-			CompoundTag tag = stack.getOrDefault(DataComponents.CUSTOM_DATA, CustomData.EMPTY).copyTag();
-			tag.putInt("Energy", clamped);
-			stack.set(DataComponents.CUSTOM_DATA, CustomData.of(tag));
+		public static void setEnergy(ItemStack stack,int amount){
+			int clamped=Math.clamp(amount,0,MAX);
+			CompoundTag tag=stack.getOrDefault(DataComponents.CUSTOM_DATA,CustomData.EMPTY).copyTag();
+			tag.putInt("Energy",clamped);
+			stack.set(DataComponents.CUSTOM_DATA,CustomData.of(tag));
 		}
-
-		public static void extract(ItemStack stack, int amount) {
-			setEnergy(stack, getEnergy(stack) - amount);
+		public static void extract(ItemStack stack,int amount){
+			setEnergy(stack,getEnergy(stack)-amount);
 		}
-
 		// ── Capability registrace — volej v RegisterCapabilitiesEvent ────────
 		// Přidej do svého capability event handleru:
 		//
 		//   ElectroRunners.Boots.registerCapability(event, DifItems.ELECTRO_RUNNERS_BOOTS.get());
 		//
-		public static void registerCapability(RegisterCapabilitiesEvent event, Item item) {
+		public static void registerCapability(RegisterCapabilitiesEvent event,Item item){
 			event.registerItem(
 					Capabilities.EnergyStorage.ITEM,
-					(stack, ctx) -> new IEnergyStorage() {
+					(stack,ctx)->new IEnergyStorage(){
 						@Override
-						public int receiveEnergy(int maxReceive, boolean simulate) {
-							int stored = getEnergy(stack);
-							int toReceive = Math.min(maxReceive, MAX - stored);
-							if (!simulate && toReceive > 0) {
-								setEnergy(stack, stored + toReceive);
+						public int receiveEnergy(int maxReceive,boolean simulate){
+							int stored=getEnergy(stack);
+							int toReceive=Math.min(maxReceive,MAX-stored);
+							if(!simulate&&toReceive>0){
+								setEnergy(stack,stored+toReceive);
 							}
 							return toReceive;
 						}
-
 						@Override
-						public int extractEnergy(int maxExtract, boolean simulate) {
-							int stored = getEnergy(stack);
-							int toExtract = Math.min(maxExtract, stored);
-							if (!simulate && toExtract > 0) {
-								setEnergy(stack, stored - toExtract);
+						public int extractEnergy(int maxExtract,boolean simulate){
+							int stored=getEnergy(stack);
+							int toExtract=Math.min(maxExtract,stored);
+							if(!simulate&&toExtract>0){
+								setEnergy(stack,stored-toExtract);
 							}
 							return toExtract;
 						}
-
 						@Override
-						public int getEnergyStored() {
+						public int getEnergyStored(){
 							return getEnergy(stack);
 						}
-
 						@Override
-						public int getMaxEnergyStored() {
+						public int getMaxEnergyStored(){
 							return MAX;
 						}
-
 						@Override
-						public boolean canExtract() {
+						public boolean canExtract(){
 							return false; // tesla může jen nabíjet, ne vybíjet přes capability
 						}
-
 						@Override
-						public boolean canReceive() {
+						public boolean canReceive(){
 							return true;
 						}
 					},
 					item
 			);
 		}
-
 		// ── Render ───────────────────────────────────────────────────────────
-
 		@Override
-		public ResourceLocation getArmorTexture(@NotNull ItemStack stack, @NotNull Entity entity, @NotNull EquipmentSlot slot, ArmorMaterial.@NotNull Layer layer, boolean innerModel) {
+		public ResourceLocation getArmorTexture(@NotNull ItemStack stack,@NotNull Entity entity,@NotNull EquipmentSlot slot,ArmorMaterial.@NotNull Layer layer,boolean innerModel){
 			return ResourceLocation.fromNamespaceAndPath(DifMod.MODID,"textures/models/armor/electro_runners.png");
 		}
 		@Override
-		public void initializeClient(Consumer<IClientItemExtensions> consumer) {
-			consumer.accept(new IClientItemExtensions() {
+		public void initializeClient(Consumer<IClientItemExtensions> consumer){
+			consumer.accept(new IClientItemExtensions(){
 				@Override
 				@OnlyIn(Dist.CLIENT)
 				public @NotNull HumanoidModel<?> getHumanoidArmorModel(
-						@NotNull LivingEntity living, @NotNull ItemStack stack,
-						@NotNull EquipmentSlot slot, @NotNull HumanoidModel<?> defaultModel) {
-					HumanoidModel<?> armorModel = new HumanoidModel<>(new ModelPart(
+						@NotNull LivingEntity living,@NotNull ItemStack stack,
+						@NotNull EquipmentSlot slot,@NotNull HumanoidModel<?> defaultModel){
+					HumanoidModel<?> armorModel=new HumanoidModel<>(new ModelPart(
 							Collections.emptyList(),
 							Map.of(
-									"left_leg", new ModelElectroRunners(Minecraft.getInstance()
+									"left_leg",new ModelElectroRunners(Minecraft.getInstance()
 											.getEntityModels().bakeLayer(ModelElectroRunners.LAYER_LOCATION)).LeftLeg,
-									"right_leg", new ModelElectroRunners(Minecraft.getInstance()
+									"right_leg",new ModelElectroRunners(Minecraft.getInstance()
 											.getEntityModels().bakeLayer(ModelElectroRunners.LAYER_LOCATION)).RightLeg,
-									"head", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"hat", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"body", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"right_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap()),
-									"left_arm", new ModelPart(Collections.emptyList(), Collections.emptyMap())
+									"head",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"hat",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"body",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"right_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap()),
+									"left_arm",new ModelPart(Collections.emptyList(),Collections.emptyMap())
 							)));
-					armorModel.crouching = living.isShiftKeyDown();
-					armorModel.riding = defaultModel.riding;
-					armorModel.young = living.isBaby();
+					armorModel.crouching=living.isShiftKeyDown();
+					armorModel.riding=defaultModel.riding;
+					armorModel.young=living.isBaby();
 					return armorModel;
 				}
 			});
 		}
-
 		// ── Item vlastnosti ──────────────────────────────────────────────────
-
 		@Override
-		public boolean isEnchantable(@NotNull ItemStack stack) { return false; }
-
-		@Override
-		public int getEnchantmentValue() { return 0; }
-
-		@Override
-		public boolean isBarVisible(@NotNull ItemStack stack) { return true; }
-
-		@Override
-		public int getBarWidth(@NotNull ItemStack stack) {
-			return Math.round(13F * getEnergy(stack) / MAX);
+		public boolean isEnchantable(@NotNull ItemStack stack){
+			return false;
 		}
-
 		@Override
-		public int getBarColor(@NotNull ItemStack stack) { return 0x00FFFF; }
-
+		public int getEnchantmentValue(){
+			return 0;
+		}
 		@Override
-		public @NotNull ItemAttributeModifiers getDefaultAttributeModifiers() {
+		public boolean isBarVisible(@NotNull ItemStack stack){
+			return true;
+		}
+		@Override
+		public int getBarWidth(@NotNull ItemStack stack){
+			return Math.round(13F*getEnergy(stack)/MAX);
+		}
+		@Override
+		public int getBarColor(@NotNull ItemStack stack){
+			return 0x00FFFF;
+		}
+		@Override
+		public @NotNull ItemAttributeModifiers getDefaultAttributeModifiers(){
 			return ItemAttributeModifiers.builder()
 					.add(Attributes.ARMOR,
-							new AttributeModifier(A_MOD, 2, AttributeModifier.Operation.ADD_VALUE),
+							new AttributeModifier(A_MOD,2,AttributeModifier.Operation.ADD_VALUE),
 							EquipmentSlotGroup.bySlot(EquipmentSlot.FEET))
 					.add(Attributes.MOVEMENT_SPEED,
-							new AttributeModifier(S_MOD, 0.2, AttributeModifier.Operation.ADD_MULTIPLIED_TOTAL),
+							new AttributeModifier(S_MOD,0.2,AttributeModifier.Operation.ADD_MULTIPLIED_TOTAL),
 							EquipmentSlotGroup.bySlot(EquipmentSlot.FEET))
 					.add(Attributes.STEP_HEIGHT,
-							new AttributeModifier(H_MOD, 1, AttributeModifier.Operation.ADD_VALUE),
+							new AttributeModifier(H_MOD,1,AttributeModifier.Operation.ADD_VALUE),
 							EquipmentSlotGroup.bySlot(EquipmentSlot.FEET))
 					.build();
 		}
-
 		@Override
-		public void appendHoverText(@NotNull ItemStack stack, @Nullable TooltipContext ctx,
-		                            @NotNull List<Component> list, @NotNull TooltipFlag flag) {
-			list.add(Component.literal(getEnergy(stack) + " / " + MAX + " FE")
+		public void appendHoverText(@NotNull ItemStack stack,@Nullable TooltipContext ctx,
+		                            @NotNull List<Component> list,@NotNull TooltipFlag flag){
+			list.add(Component.literal(getEnergy(stack)+" / "+MAX+" FE")
 					.withStyle(ChatFormatting.AQUA));
 		}
 	}
